[workspace]

members = [
  "program",
  "integration_tests",
  "clients/rust",
]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
borsh = "1.5.5"
litesvm = "0.6.0"
pinocchio = "0.8.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
pinocchio-associated-token-account = "0.1.0"
shank = "0.4.2"
svm-alm-controller-client = { path = "clients/rust" }
solana-program = "2.1.13"
solana-sdk = "2.1.13"
bs58 = "0.5.1"
bytemuck = { version = "1.14", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2"
solana-keccak-hasher = "2.2.1"
spl-associated-token-account-client = "2.0"
spl-token = "8.0.0"
spl-token-2022 = "8.0.0"
solana-system-interface = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
hex = "0.4"
