[workspace]

members = [
  "program",
  "integration_tests",
  "clients/rust",
  "scripts"
]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
arrayref = "0.3.9"
borsh = "1.5.5"
byteorder = "1.5.0"
litesvm = "0.6.0"
pinocchio = "0.8.1"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
pinocchio-associated-token-account = "0.1.1"
shank = "0.4.2"
svm-alm-controller = { path = "program" }
svm-alm-controller-client = { path = "clients/rust" }
solana-program = "2.1.13"
solana-sdk = "2.1.13"
solana-client = "2.1.13"
bs58 = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2"
net-sdk = "2.3.1"
safe-transmute = "0.11.3"
solana-keccak-hasher = "2.2.1"
spl-associated-token-account-client = "2.0"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
solana-system-interface = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
base64 = "0.22.1"
hex = "0.4"
switchboard-on-demand = "0.3.8"
oft-client = { git = "https://github.com/nova-dot-gg/lz-rust-client", branch = "mods", package = "oft-client" }
endpoint-client = { git = "https://github.com/nova-dot-gg/lz-rust-client", branch = "mods", package = "endpoint-client" }
uln-client = { git = "https://github.com/nova-dot-gg/lz-rust-client", branch = "mods", package = "uln-client" }
