[package]
name = "svm-alm-controller-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
litesvm = { workspace = true }
solana-sdk = { workspace = true }
svm-alm-controller-client = { workspace = true }

[dev-dependencies]
test-log = "0.2.17"
