[package]
name = "svm-alm-controller-tests"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
litesvm = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
svm-alm-controller = { workspace = true }
svm-alm-controller-client = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
safe-transmute = { workspace = true }
solana-keccak-hasher = { workspace = true}
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-system-interface = { workspace = true }
spl-associated-token-account-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
static_assertions = { workspace = true }
switchboard-on-demand = { workspace = true }
oft-client = { workspace = true }
endpoint-client = { workspace = true }
uln-client = { workspace = true }
solana-client = { workspace = true }
fixed = { workspace = true }
uint = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tokio = "1.38"
