[package]
name = "svm-alm-controller"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
shank = { workspace = true }
bs58 = { workspace = true }
solana-program = { workspace = true }
borsh = "0.10.3"
borsh-derive = "0.10.3"
num-derive = { workspace = true }
num-traits = { workspace = true}

