[package]
name = "svm-alm-controller"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl = []

[dependencies]
byteorder = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
shank = { workspace = true }
bs58 = { workspace = true }
borsh = "0.10.3"
borsh-derive = "0.10.3"
num-derive = { workspace = true }
num-traits = { workspace = true}
switchboard-on-demand = { workspace = true }
bytemuck = { workspace = true }
sha2-const-stable = "0.1.0"
solana-keccak-hasher = { workspace = true }
fixed = { version = "1.23.1" }
uint = "0.9.5"

[dev-dependencies]
base64 = "0.22"