[package]
name = "svm-alm-controller"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
devnet = ["switchboard-on-demand/devnet"]
no-entrypoint = []
idl = []
verbose = []

[dependencies]
account-zerocopy-deserialize = { workspace = true }
byteorder = { workspace = true }
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio-token-interface = { workspace = true }
pinocchio-token2022 = { workspace = true }
pinocchio-associated-token-account = { workspace = true }
shank = { workspace = true }
bs58 = { workspace = true }
borsh = "0.10.3"
borsh-derive = "0.10.3"
num-derive = { workspace = true }
num-traits = { workspace = true }
sha2-const-stable = { workspace = true }
solana-keccak-hasher = { workspace = true }
switchboard-on-demand = { workspace = true }
bytemuck = { workspace = true }
fixed = { workspace = true }
uint = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
