[package]
name = "drift-protocol-v2-client"
description = "Drift client for pinocchio program and testing"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "drift_protocol_v2_client"
path = "src/lib.rs"

[features]
program = ["pinocchio", "pinocchio-pubkey"]
default = ["solana-sdk"]

[dependencies]
bytemuck = { workspace = true }
pinocchio = { workspace = true, optional = true }
pinocchio-pubkey = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
