[package]
name = "svm-alm-controller-client"
description = "Generated client for myproject"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "svm_alm_controller_client"
path = "src/lib.rs"

[features]
serde = []
fetch = []
anchor = []
anchor-idl-build = []

[dependencies]
borsh = { workspace = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-program = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true}