[package]
name = "svm-alm-controller-client"
description = "Generated client for myproject"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "svm_alm_controller_client"
path = "src/lib.rs"

[features]
serde = []
fetch = []
anchor = []
anchor-idl-build = []

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true}
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true, features = ["borsh"] }
solana-program = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-sysvar = { workspace = true }
spl-associated-token-account-client = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
solana-sdk = { workspace = true }
sha2-const-stable = { workspace = true }
psm-client = { workspace = true }
